# FirePerlin

./: .gitignore  CMakeLists.txt  README.md
shaders/: vertex.glsl
src/: FluidGrid.h  config.h  glad.c  main.cpp  square.cpp  test.cpp  tri_and_squ.cpp
src/shaders/: fragment.glsl  vertex.glsl
